--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@nextui-org/react": "^2.4.0",
     "framer-motion": "^11.2.4",
     "heroicons": "^2.1.3",
     "next": "14.2.3",
