--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "sentry": "^0.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
