--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@nextui-org/react": "^2.4.0",
+    "@sentry/nextjs": "^8.7.0",
     "framer-motion": "^11.2.4",
     "heroicons": "^2.1.3",
     "next": "14.2.3",
